syntax = "proto3";
option go_package = "ChittyChat/grpc/proto";

message Lamport {
	int32 time = 1;
	string nodeId = 2;
}

message Message {
	Lamport lamport = 1;
	string Text = 2;
}

enum Status {
	OK = 0;
	GENERAL_ERROR = 1;
	UNAUTHORIZED_ERROR = 2;
}

message PublishResponse {
	Lamport lamport = 1;
	Status Status = 2;
}

message BroadcastSubscription {
	string receiver = 1;
}


message JoinRequest {
	string nodeName = 1;
	Lamport lamport = 2;
}

message JoinResponse {
	string nodeId = 1;
	Status Status = 2;
	Lamport lamport = 3;
}

message LeaveRequest {
	string senderId = 1;
	Lamport lamport =2;
}

message LeaveResponse {
	string nodeId = 1;
	Status Status = 2;
	Lamport lamport = 3;
}

message Empty {}

service ChittyChat {
    rpc Join(JoinRequest) returns (JoinResponse);
	rpc Leave(LeaveRequest) returns (LeaveResponse);
    rpc Publish(Message) returns (PublishResponse);
    rpc Broadcast (BroadcastSubscription) returns (stream Message);
}